--- a/appmy/templates/index.html
+++ b/appmy/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your App Name</title>
+    <title>News Summairiser</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -44,7 +44,7 @@
 <body>
 
     <div class="header">
-        <h1>Welcome to Your App</h1>
+        <h1>Welcome!</h1>
         <p>Get the answers you need, instantly!</p>
     </div>
 
@@ -62,7 +62,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2025 Your App Name. All rights reserved.</p>
+        <p>&copy; 2025 aibasednewssummairiser. All rights reserved.</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
